Department Controller